トークテーマ一覧をViewComponentに置き換え

--- a/app/components/talk_theme/index/component.html.slim
+++ b/app/components/talk_theme/index/component.html.slim
@@ -1,7 +1,7 @@
 = turbo_frame_tag 'talk_themes_list'
   - unless @talk_themes.count.zero?
-    = render partial: 'talk_themes/talk_themes',
-      locals: { talk_themes: @talk_themes, roulette: @roulette }
+    = render(TalkTheme::TalkThemes::Component.new( \
+      talk_themes: @talk_themes, roulette: @roulette))
   = turbo_frame_tag 'new_talk_theme' do
     .mt-3.px-1 data-testid="new-talk-theme-link"
       - if @talk_themes.count < 10
