話す人入力フォームをViewComponentに置き換え

--- a/app/views/speakers/edit.html.slim
+++ b/app/views/speakers/edit.html.slim
@@ -1,6 +1,6 @@
 = turbo_frame_tag @speaker
   .flex.items-center.h-full
-    = render partial: 'form',
-      locals: { roulette: @roulette,
-                speaker: @speaker,
-                button_label: '更新' }
+    = render(Speaker::Form::Component.new( \
+      roulette: @roulette,
+      speaker: @speaker,
+      button_label: '更新'))
