--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -17,8 +17,8 @@
       .mt-6.lg:h-80
         h2.font-bold.text-lg.mb-2
           | 話す人
-        = render partial: 'speakers/index',
-          locals: { roulette: @roulette, speakers: @speakers }
+        = render(Speaker::Index::Component.new(\
+          roulette: @roulette, speakers: @speakers))
       .w-full.mt-10.text-right
         = link_to 'トークテーマをコピーして新規作成',
           roulette_templates_path(@roulette),
