--- a/app/views/speakers/create.turbo_stream.slim
+++ b/app/views/speakers/create.turbo_stream.slim
@@ -1,6 +1,6 @@
 = turbo_stream.replace 'speakers_list' do
-  = render partial: 'speakers/index',
-    locals: { roulette: @roulette, speakers: @speakers }
+  = render(Speaker::Index::Component.new(\
+    roulette: @roulette, speakers: @speakers))
 
 - if @speakers.count == 1 && !@talk_themes.count.zero?
   = turbo_stream.remove 'no_items_roulette'
