--- a/app/views/speakers/destroy.turbo_stream.slim
+++ b/app/views/speakers/destroy.turbo_stream.slim
@@ -8,8 +8,8 @@
 
 - else
   = turbo_stream.replace 'speakers_list' do
-    = render partial: 'speakers/index',
-      locals: { roulette: @roulette, speakers: @speakers }
+    = render(Speaker::Index::Component.new(\
+      roulette: @roulette, speakers: @speakers))
 
   - unless @talk_themes.count.zero?
     = turbo_stream.replace 'roulette' do
