--- a/app/components/toast/component.html.slim
+++ b/app/components/toast/component.html.slim
@@ -1,12 +1,5 @@
-- if @flash.notice
-  div[class='absolute top-4 right-2 w-72 shadow-xl alert alert-success\
-            z-10 opacity-90 pointer-events-none'
-      data-controller="toast"]
-    p
-      = @flash.notice
-- if @flash.alert
-  div[class='absolute top-4 right-2 w-72 shadow-xl alert alert-error\
-            z-10 opacity-90 pointer-events-none'
-      data-controller="toast"]
-    p
-      = @flash.alert
+div[class="absolute top-4 right-2 w-72 shadow-xl alert #{color_class}\
+          z-10 opacity-90 pointer-events-none"
+    data-controller="toast"]
+  p
+    = @message
