--- a/app/views/speakers/edit.html.slim
+++ b/app/views/speakers/edit.html.slim
@@ -1,6 +1,8 @@
 = turbo_frame_tag @speaker
   .flex.items-center.h-full
-    = render(Speaker::Form::Component.new( \
+    = render(Form::Component.new( \
       roulette: @roulette,
-      speaker: @speaker,
+      model: @speaker,
+      column: :name,
+      placeholder: '田中さん',
       button_label: '更新'))
