--- a/app/views/speakers/new.html.slim
+++ b/app/views/speakers/new.html.slim
@@ -1,6 +1,8 @@
 = turbo_frame_tag 'new_speaker'
   .mt-3
-    = render(Speaker::Form::Component.new( \
+    = render(Form::Component.new( \
       roulette: @roulette,
-      speaker: @speaker,
+      model: @speaker,
+      column: :name,
+      placeholder: '田中さん',
       button_label: '登録'))
