--- a/app/views/speakers/destroy.turbo_stream.slim
+++ b/app/views/speakers/destroy.turbo_stream.slim
@@ -8,7 +8,7 @@
 
 - else
   = turbo_stream.replace 'speakers_list' do
-    = render(Speaker::Index::Component.new(\
+    = render(Speakers::Component.new(\
       roulette: @roulette, speakers: @speakers))
 
   - unless @talk_themes.count.zero?
