--- a/app/views/talk_themes/update.turbo_stream.slim
+++ b/app/views/talk_themes/update.turbo_stream.slim
@@ -1,5 +1,5 @@
 = turbo_stream.update 'talk_themes_list' do
-  = render(TalkTheme::Index::Component.new(\
+  = render(TalkThemes::Component.new(\
     roulette: @roulette, talk_themes: @talk_themes))
 
 - if !@speakers.count.zero?
